// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader /> should not render the loader component when loading is false 1`] = `<div />`;

exports[`<Loader /> should render the loader component 1`] = `
<div>
  <div
    class="loader"
  >
    <div />
    <div />
  </div>
</div>
`;

exports[`<Loader /> should render the loader component with a custom class 1`] = `
<div>
  <div
    class="loader custom-class"
  >
    <div />
    <div />
  </div>
</div>
`;
